--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -50,15 +50,26 @@
   }
 }
 
+@font-face {
+  font-family: 'Gerlick';
+  src: url('./font/Gerlick.otf');
+}
+
+@font-face {
+  font-family: 'Aborm';
+  src: url('./font/AbormRegular-owK9V.otf'),
+       url('./font/AbormRegular-owK9V.ttf');
+}
+
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
+  margin: 0 0.3rem 0 0.3rem;
 }
 
 body {
-  min-height: 100vh;
+  max-height: 100vh;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(232, 232, 232);
 }
